@startuml
'https://plantuml.com/class-diagram

class Cube

class Face

abstract class Part
abstract class PartSlice
abstract class PartEdge

Part <|-- Edge
Part <|-- Corner
Part <|-- Center

Part *-- PartSlice

PartSlice <|-- EdgeWing
PartSlice <|-- CornerSlice
PartSlice <|-- CenterSlice


Cube   *--  "6" Face: "faces"

Face  o-- "1" Center
Face  o-- "4" Edge
Face  o-- "4" Corner

Edge o.. "N" EdgeWing: "sp*"
note on link #yellow: "specification"
Corner o.. "1" CornerSlice: "sp*"
Center o.. "NxN" CenterSlice: "sp*"

PartSlice *-- PartEdge

PartEdge <|-- WingFacet
PartEdge <|-- CornerSliceFacet
PartEdge <|-- CenterSliceFacet

EdgeWing o.. "2" WingFacet: "sp*"
CornerSlice o.. "3" CornerSliceFacet: "sp*"
CenterSlice o.. "1" CenterSliceFacet: "sp*"

@enduml